Removed overflow properties to set screen size and prevent unsightly scroll bars where they dont belong. Updated fonts and font styles.

--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,6 @@ increases. */
 
 html, body, footer {
 	width: 100%;
-	overflow-x: hidden;
-	overflow-y: scroll
 }
 
 body {
@@ -126,6 +124,7 @@ header#globalHeader > nav > ul > li:last-child {
 header#globalHeader > nav > ul > li > a {
 	display: block;
 	text-align: center;
+	font-weight: 300;
 }
 
 div#logo-wrap, figure#headerIcon, div#logo-wrap h1 {
@@ -231,13 +230,13 @@ button#mobileNavBtn:hover > svg > path.bar {
 }
 
 #contentSection > section.show {
+	transition: 1.5s ease;
 	display: block;
 }
 
 #homePageContent,
 #aboutPageContent,
 #contactPageContent {
-	min-height: 450px;
 	width: 70%;
 	margin: 3em auto;
 	background-color: #FCFCF8;
@@ -245,8 +244,18 @@ button#mobileNavBtn:hover > svg > path.bar {
 	box-shadow: 2px 2px 10px #666;
 }
 
+#homePageContent,
+#aboutPageContent {
+	min-height: 450px;
+}
+
+#contactPageContent {
+	min-height: 550px;
+}
+
 #companyPageContent {
 	margin: 0 auto;
+	min-height: 650px;
 }
 
 #contactPageContent {
@@ -258,13 +267,17 @@ button#mobileNavBtn:hover > svg > path.bar {
 #contactPageContent h1 {
 	text-align: center;
 	padding: 1em;
+	font-size: 2.5em;
 }
 
 #homePageContent p,
 #aboutPageContent p,
 #contactPageContent p {
 	padding: .2em 2em;
-	font-size: .9em;
+	font-size: 1.3em;
+	line-height: 1.4;
+	letter-spacing: .05em;
+	font-weight: 300;
 }
 
 #homePageContent p:last-child,
@@ -290,19 +303,22 @@ section#companyProfile .profileBox {
 	-webkit-flex-grow: 1;
 	flex-grow: 1;
 	width: 20%;
-	min-height: 14em;
+	max-height: 14em;
 	max-width: 27%;
-	background: #377F5E;
 	color: #fff;
 	margin: 1em;
+	overflow: hidden;
 }
 
 section#companyProfile figure.portrait {
 	background-color: goldenrod;
-	min-height: 12em;
+	background-image: url("../img/erik.jpg");
+	background-size: cover;
+	background-position: center;
+	height: 14em;
 	width: 100%;
 	position: relative;
-	z-index: 1;
+	z-index: 2;
 }
 
 .profileBox h3,
@@ -310,7 +326,20 @@ section#companyProfile figure.portrait {
 	padding: .3em;
 }
 
-#companyPageContent article {
+section#companyProfile .profileBox div.profile-info {
+	position: relative;
+	z-index: 3;
+	top: -2em;
+	background-color: #377F5E;
+	opacity: .95;
+	transition: 1.5s ease;
+}
+
+section#companyProfile .profileBox:hover > div.profile-info {
+	top: -4em;
+}
+
+/*#companyPageContent article {
     background-color: #FCFCF8;
     opacity: .9;
     display: block;
@@ -322,7 +351,7 @@ section#companyProfile figure.portrait {
 #companyPageContent article p:first-child {
 	font-weight: bold;
 	text-decoration: underline;
-}
+}*/
 
 
 /* ------------------  Contact Container ---------------------------------- */
@@ -345,7 +374,7 @@ section#companyProfile figure.portrait {
 }
 
 #contact-form textarea {
-	min-height: 3em;
+	min-height: 5em;
 }
 
 #contact-form input[type="text"]:focus,
@@ -393,6 +422,7 @@ button#send:hover {
 footer p {
 	text-align: center;
 	padding: 1em;
+	font-weight: 300;
 }
 
 /* ------------------- Media Queries --------------------------------- */
